examples/test/testpolicy13999.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13999
  namespace: namespace9
spec:
  podSelector:
    matchLabels:
      key31: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value12
          key17: value22
      podSelector:
        matchLabels:
          key47: value13
          key5: value9
